--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,14 @@
     "author": "otiai10",
     "background": {
         "page": "src/html/background.html"
-    }
+    },
+    "content_scripts": [
+      {
+        "matches": ["<all_urls>"],
+        "js": ["src/js/content.js"]
+      }
+    ],
+    "permissions": [
+      "<all_urls>"
+    ]
 }
