--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "content_scripts": [
       {
         "matches": ["<all_urls>"],
-        "js": ["src/js/inject.js"]
+        "js": ["src/js/content_script.js"]
       }
     ],
     "permissions": [
